style(Panel); Fix the overflow of the linked data panel

--- a/src/manageExtension/index.css
+++ b/src/manageExtension/index.css
@@ -62,3 +62,7 @@
     right: 40px;
     top: 8px;
  }
+
+ .panel-body {
+    overflow: auto;
+ }
